# quarto-writing-hf

./: .gitmodules  .pre-commit-config.yaml  Makefile  README.md  bentofile.yaml  deployment.yaml  pyproject.dev.toml  pyproject.toml
.github/workflows/: prometheus.yml
hf-cookbook/: optuna_hpo_with_transformers.html  optuna_hpo_with_transformers.qmd
hf-cookbook/optuna_hpo_with_transformers_files/libs/bootstrap/: bootstrap-82fadaf3114e7bafe48a7052222a13f4.min.css
hf-cookbook/src/: _quarto.yml  about.qmd  index.qmd  requirements.txt  styles.css
hf-cookbook/src/_site/: about.html  index.html  search.json
hf-cookbook/src/_site/site_libs/bootstrap/: bootstrap-a19cb7225d91e2273b88736cee51c538.min.css
open-source-case-study/: .gitattributes  .gitignore  Dockerfile  _quarto.yml  index.qmd
open-source-case-study/posts/post-with-code/: index.qmd
open-source-case-study/posts/welcome/: index.qmd
open-source-case-study/src/: _quarto.yml  about.qmd  index.qmd  styles.css
open-source-case-study/src/_site/: about.html  index.html  index.xml  listings.json  search.json  sitemap.xml  styles.css
src/: gradio_frontend.py  predict.py
src/monitoring/: prometheus.py
