[tool.bentoml.build]
service = "service:MyService"
description = "A blazing-fast inference stack for Flux.1-dev with dynamic LoRA hotswapping."

models = [
  # Base FLUX model
  { tag = "black-forest-labs/FLUX.1-dev:latest", alias = "flux_base" },

  # LoRA: open-image-preferences
  { tag = "data-is-better-together/open-image-preferences-v1-flux-dev-lora:latest", alias = "lora_open_image" },

  # LoRA: flux-ghibsky
  { tag = "aleksa-codes/flux-ghibsky-illustration:latest", alias = "lora_flux_ghibsky" }
]

[tool.bentoml.build.labels]
owner = "Parag Ekbote"
stage = "not-ready"

[tool.bentoml.build.args]
gpu = 1

[tool.bentoml.build.python]

packages = [
    "pillow>=11.3.0",
    "transformers>=4.52.0",
    "accelerate>=1.8.0",
    "diffusers>=0.33.0",
    "bitsandbytes>=0.45.0",
    "huggingface-hub[hf-xet]",
    "peft>=0.15.0",
    "sentencepiece>=0.1.95",
    "protobuf>=3.20.0"
]

pip_args = [
    "--no-cache-dir",
    "--extra-index-url=https://download.pytorch.org/whl/cu121"
]

[tool.bentoml.build.docker]
distro = "debian"
python_version = "3.11"
system_packages = ["libblas-dev", "liblapack-dev", "gfortran"]

[tool.coverage.run]  
source = ["."]
include = ["skorch/*"]
omit = [
    "skorch/tests/*",
    "skorch/_version.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.flake8]
max-line-length = 88
docstring-convention = "numpy"
ignore = "D204,D401"

[project.optional-dependencies]
dev = [
    "pylint",
    "flake8",
    "future>=0.17.1",
]

test = [
    "pytest>=3.4",
    "pytest-cov",
    "flaky",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

addopts = [
    "--cov=src/",
    "--cov-report=term-missing",
    "--cov-config=pyproject.toml",
    "--durations=0"
]

python_files = "test_*.py"

testpaths = [
    "tests/",
]